Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29961

Dropping files onto WelcomeScreen is broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • Qt Creator 12.0.1
    • Qt Creator 12.0.1
    • All Other Issues
    • None
    • a71b33944 (12.0)

    Description

      Files can be dropped onto Qt Creator, and they open. That is broken in QtC 12.0.

      My theory is that it broke with e34762c84436c9b8b3d35f119a893dcd6cb4f4db then got fixed with 5da1f149034590626171308b5d74c9df15739b2d but the fix got reverted by e5f74d217b8c8c469ba16afd38c723be5e156555

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              portale Alessandro Portale
              portale Alessandro Portale
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes