Core: Restore opening of files that are dropped on the MainWindow

The code to handle dropping unintentionally got commented out, then
fixed, then commented out again.

This change restores it.

Amends: e5f74d217b8c8c469ba16afd38c723be5e156555
..which amended: 5da1f149034590626171308b5d74c9df15739b2d
..which amended: e34762c84436c9b8b3d35f119a893dcd6cb4f4db

Fixes: QTCREATORBUG-29961
Change-Id: Iccc8a9b7bc24bc3475ed4fa37a7c231a1f575c1c
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>